# sdt-bench

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  timeline_first_benchmark_build_plan.md
.github/workflows/: benchmark_smoke.yml  ci.yml
benchmark_data/: README.md  manifest.yaml
benchmark_data/episodes/: README.md
benchmark_data/projects/: README.md
benchmark_data/timelines/: requests.yaml  toy.yaml
configs/: global.yaml
configs/repos/: pytest.yaml  requests.yaml  sphinx.yaml  sqlfluff.yaml  toy.yaml  xarray.yaml
data/episodes/: README.md
docs/: agent_interface.md  architecture.md  authoring.md  benchmark_spec.md  development.md  episode_schema.md  evaluation.md  index.md  quickstart.md  repo_onboarding.md  vector_db_protocol.md
pilot/: .gitignore  README.md  record.md  requirements.txt
pilot/baselines/: full_reindex.py  static_rag.py
pilot/config/: repos.yaml
pilot/src/: aggregate_metrics.py  apply_gold_db_diff.py  build_event_stream.py  chunk_and_ingest.py  common.py  harvest_releases.py  materialise_snapshot.py  measure_diff.py  run_agent.py  score_patch.py  score_review.py
src/clab/: __init__.py  cli.py  paths.py
src/sdt_bench/: __init__.py  cli.py  paths.py
tests/: helpers.py  test_authoring_pipeline.py  test_episode_schema.py  test_external_agent_interop.py  test_in_memory_vectordb.py  test_loader.py  test_materialization.py  test_metrics.py  test_mutation_log.py  test_network_materialization.py  test_patch_apply.py  test_project_dataset.py  test_report_generation.py  test_smoke_integration.py
(+571 files in other folders)
