[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "sdt-bench"
version = "0.1.0"
description = "Continuous-learning benchmark scaffold for dependency-drift coding agents."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { file = "LICENSE" }
authors = [{ name = "OpenAI Codex" }]
dependencies = [
  "pydantic>=2.10.0,<3.0.0",
  "PyYAML>=6.0.2,<7.0.0",
  "Typer>=0.16.0,<1.0.0",
  "rich>=14.0.0,<15.0.0",
  "qdrant-client>=1.10.0,<2.0.0",
  "httpx>=0.28.0,<0.29.0",
  "packaging>=24.0,<26.0",
]

[project.scripts]
"sdt-bench" = "sdt_bench.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "ruff>=0.11.0,<0.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sdt_bench", "src/sdt_bench_baselines"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "network: tests that require networked framework installs",
]

[tool.ruff]
line-length = 140
target-version = "py311"
exclude = ["pilot"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]
